Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118710

[REG 6.5.2 → 6.5.3] QQmlProperty: wrong warning about signal handler capitalization

    XMLWordPrintable

Details

    • 9d10b7956 (dev), 6c0489e65 (6.7), e5d8daf82 (6.6), 4bc9083a7 (tqtc/lts-6.5)

    Description

      We have a QML component with a property onlineStatus. Since recently we now get this warning:

      [W] (default): "onlineStatus" is not a properly capitalized signal handler name. "onLineStatus" would be correct.
      

      This is obviously wrong. Grepping the sources, it seems to come from this place in qqmlproperty.cpp:

              // qqmlproperty.cpp:412
              signalName = QQmlSignalNames::badHandlerNameToSignalName(terminal);
              if (signalName) {
                  qWarning()
                          << terminal
                          << "is not a properly capitalized signal handler name."
                          << QQmlSignalNames::signalNameToHandlerName(*signalName)
                          << "would be correct.";
                  if (findSignal(*signalName))
                      return;
              }
      

      I guess the warning should be moved inside the if (findSignal()) block, i.e. only printed when a signal with that name was actually found.

      Attachments

        For Gerrit Dashboard: QTBUG-118710
        # Subject Branch Project Status CR V

        Activity

          People

            ulherman Ulf Hermann
            msarehn Arno Rehn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes