QQmlProperty: fix signal handler warning

It should only be emitted if we find a signal of that name.

Pick-to: 6.6 6.5
Fixes: QTBUG-118710
Change-Id: I15cf92c03dd7b46805e5a69078ca2beb6c862293
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 9d10b7956662d56e02053b3cbe41fd7ca05dced3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>