tests/auto/qml/qqmlproperty/data/propertyStartsWithOn.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    id: root
+    property int onlineStatus
+    property Binding b: Binding {
+        root.onlineStatus: 12
+    }
+}
