tests/auto/qml/qqmlproperty/tst_qqmlproperty.cpp
@@ -222,6 +222,8 @@ private slots:
 
     void invalidateQPropertyChangeTriggers();
 
+    void propertyStartsWithOn();
+
 private:
     QQmlEngine engine;
 };
@@ -2587,6 +2589,18 @@ void tst_qqmlproperty::invalidateQPropertyChangeTriggers()
         u""_s, u"1300"_s, u"Create Object"_s,
         u""_s
     }));
+}
+
+void tst_qqmlproperty::propertyStartsWithOn()
+{
+    QTest::failOnWarning("\"onlineStatus\" is not a properly capitalized signal handler name. "
+                         "\"onLineStatus\" would be correct.");
+    QQmlEngine engine;
+    QQmlComponent component(&engine, testFileUrl("propertyStartsWithOn.qml"));
+    QVERIFY2(component.isReady(), qPrintable(component.errorString()));
+    QScopedPointer<QObject> root(component.create());
+    QVERIFY(!root.isNull());
+    QCOMPARE(root->property("onlineStatus").toInt(), 12);
 }
 
 QTEST_MAIN(tst_qqmlproperty)
